qa-pr-dashboard/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa-pr-dashboard
  labels:
    name: qa-pr-dashboard
